--- a/app/globals.css
+++ b/app/globals.css
@@ -65,6 +65,8 @@ strong {
    @apply gap-2;
    @apply rounded-lg;
    @apply border;
+   @apply dark:border-stone-700;
+   @apply dark:bg-stone-950;
    @apply px-2;
    @apply py-1;
    @apply text-sm;
@@ -92,9 +94,10 @@ strong {
 .details-dropdown {
    @apply cursor-pointer;
    @apply select-none;
-   
+
    list-style-type: " ";
    @apply bg-[url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGZpbGw9Im5vbmUiIHZpZXdCb3g9IjAgMCAyNCAyNCIgc3Ryb2tlLXdpZHRoPSIxLjUiIHN0cm9rZT0iIzljYTNhZiI+CiAgPHBhdGggc3Ryb2tlLWxpbmVjYXA9InJvdW5kIiBzdHJva2UtbGluZWpvaW49InJvdW5kIiBkPSJtOC4yNSA0LjUgNy41IDcuNS03LjUgNy41IiAvPgo8L3N2Zz4K)];
+   @apply dark:bg-[url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGZpbGw9Im5vbmUiIHZpZXdCb3g9IjAgMCAyNCAyNCIgc3Ryb2tlLXdpZHRoPSIxLjUiIHN0cm9rZT0iIzc4NzE2YyI+CiAgPHBhdGggc3Ryb2tlLWxpbmVjYXA9InJvdW5kIiBzdHJva2UtbGluZWpvaW49InJvdW5kIiBkPSJtOC4yNSA0LjUgNy41IDcuNS03LjUgNy41IiAvPgo8L3N2Zz4K)];
    @apply bg-no-repeat;
    background-position: left center;
    background-size: 0.9em;
@@ -104,15 +107,19 @@ strong {
 }
 
 /* Safari-only padding adjustment */
-_::-webkit-full-page-media, _:future, :root .details-dropdown {
+_::-webkit-full-page-media,
+_:future,
+:root .details-dropdown {
    @apply pl-[calc(1em+4px)];
- }
+}
 
 details[open] > .details-dropdown {
    @apply bg-[url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGZpbGw9Im5vbmUiIHZpZXdCb3g9IjAgMCAyNCAyNCIgc3Ryb2tlLXdpZHRoPSIxLjUiIHN0cm9rZT0iIzljYTNhZiI+CiAgPHBhdGggc3Ryb2tlLWxpbmVjYXA9InJvdW5kIiBzdHJva2UtbGluZWpvaW49InJvdW5kIiBkPSJtMTkuNSA4LjI1LTcuNSA3LjUtNy41LTcuNSIgLz4KPC9zdmc+Cg==)];
+   @apply dark:bg-[url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGZpbGw9Im5vbmUiIHZpZXdCb3g9IjAgMCAyNCAyNCIgc3Ryb2tlLXdpZHRoPSIxLjUiIHN0cm9rZT0iIzc4NzE2YyI+CiAgPHBhdGggc3Ryb2tlLWxpbmVjYXA9InJvdW5kIiBzdHJva2UtbGluZWpvaW49InJvdW5kIiBkPSJtMTkuNSA4LjI1LTcuNSA3LjUtNy41LTcuNSIgLz4KPC9zdmc+Cg==)];
 }
 
-.details-dropdown::-webkit-details-marker, .dropdown-details::marker {
+.details-dropdown::-webkit-details-marker,
+.dropdown-details::marker {
    display: none;
 }
 
@@ -126,13 +133,16 @@ details[open] > .details-dropdown {
    @apply gap-3;
    @apply p-4;
    @apply bg-gray-50;
+   @apply dark:bg-stone-800;
    @apply border;
    @apply border-gray-100;
+   @apply dark:border-stone-700;
    @apply rounded-xl;
    @apply transition-transform;
    @apply ease-out;
    @apply hover:scale-103;
    @apply text-gray-800;
+   @apply dark:text-stone-300;
    @apply leading-5;
    @apply w-full;
 }
@@ -141,6 +151,7 @@ details[open] > .details-dropdown {
    @apply mt-0 !important;
    @apply mb-0 !important;
    @apply text-gray-500;
+   @apply dark:text-stone-500;
 }
 
 .rl-metadata {
@@ -172,6 +183,7 @@ details[open] > .details-dropdown {
 
 .rl-container blockquote:hover .rl-metadata > svg {
    @apply text-blue-500;
+   @apply dark:text-violet-500;
 }
 
 .rl-url-container {
@@ -190,6 +202,7 @@ details[open] > .details-dropdown {
 .rl-url {
    @apply not-italic;
    @apply text-gray-700;
+   @apply dark:text-stone-400;
    @apply truncate;
    @apply max-w-full;
    @apply md:max-w-[345px];
