--- a/app/globals.css
+++ b/app/globals.css
@@ -30,7 +30,7 @@ strong {
 
 .proseStyling {
    @apply prose-a:text-blue-500 hover:prose-a:underline dark:prose-a:text-violet-400;
-   @apply prose-img:h-[auto] prose-img:max-h-80 prose-img:w-[auto] prose-img:max-w-full prose-img:object-contain;
+   @apply prose-img:max-w-full;
    @apply prose-img:rounded-xl prose-img:border prose-img:bg-gray-50 prose-img:transition-transform prose-img:ease-out hover:prose-img:scale-103 dark:prose-img:border-stone-700 dark:prose-img:bg-stone-800;
    @apply prose-ul:ml-4 prose-ul:list-inside prose-ul:list-disc prose-ul:p-0 prose-li:m-0 prose-li:p-0;
    @apply prose-ol:ml-0 prose-ol:list-inside prose-ol:list-decimal prose-ol:p-0 prose-li:m-0 prose-li:p-0;
