Update progressive blur styling

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,23 +6,11 @@ html {
    font-size: 100%;
 }
 
-_::-webkit-full-page-media,
-_:future,
-:root .so_header {
-   @apply fixed;
-}
-
-_::-webkit-full-page-media,
-_:future,
-:root .so_main {
-   @apply mt-[4.75rem] px-4 md:mt-[6.75rem];
-}
-
 .gradient-blur {
    position: fixed;
-   z-index: 5;
-   inset: auto 0 0 0;
-   height: 65%;
+   z-index: 0;
+   inset: 0 0 auto 0;
+   @apply h-[24px] md:h-[40px] lg:h-[56px];
    pointer-events: none;
 }
 .gradient-blur > div,
@@ -33,10 +21,10 @@ _:future,
 }
 .gradient-blur::before {
    content: "";
-   z-index: 1;
+   z-index: 8;
    backdrop-filter: blur(0.5px);
    mask: linear-gradient(
-      to bottom,
+      to top,
       rgba(0, 0, 0, 0) 0%,
       rgba(0, 0, 0, 1) 12.5%,
       rgba(0, 0, 0, 1) 25%,
@@ -44,10 +32,10 @@ _:future,
    );
 }
 .gradient-blur > div:nth-of-type(1) {
-   z-index: 2;
+   z-index: 7;
    backdrop-filter: blur(1px);
    mask: linear-gradient(
-      to bottom,
+      to top,
       rgba(0, 0, 0, 0) 12.5%,
       rgba(0, 0, 0, 1) 25%,
       rgba(0, 0, 0, 1) 37.5%,
@@ -55,10 +43,10 @@ _:future,
    );
 }
 .gradient-blur > div:nth-of-type(2) {
-   z-index: 3;
+   z-index: 6;
    backdrop-filter: blur(2px);
    mask: linear-gradient(
-      to bottom,
+      to top,
       rgba(0, 0, 0, 0) 25%,
       rgba(0, 0, 0, 1) 37.5%,
       rgba(0, 0, 0, 1) 50%,
@@ -66,10 +54,10 @@ _:future,
    );
 }
 .gradient-blur > div:nth-of-type(3) {
-   z-index: 4;
+   z-index: 5;
    backdrop-filter: blur(4px);
    mask: linear-gradient(
-      to bottom,
+      to top,
       rgba(0, 0, 0, 0) 37.5%,
       rgba(0, 0, 0, 1) 50%,
       rgba(0, 0, 0, 1) 62.5%,
@@ -77,10 +65,10 @@ _:future,
    );
 }
 .gradient-blur > div:nth-of-type(4) {
-   z-index: 5;
+   z-index: 4;
    backdrop-filter: blur(8px);
    mask: linear-gradient(
-      to bottom,
+      to top,
       rgba(0, 0, 0, 0) 50%,
       rgba(0, 0, 0, 1) 62.5%,
       rgba(0, 0, 0, 1) 75%,
@@ -88,10 +76,10 @@ _:future,
    );
 }
 .gradient-blur > div:nth-of-type(5) {
-   z-index: 6;
+   z-index: 3;
    backdrop-filter: blur(16px);
    mask: linear-gradient(
-      to bottom,
+      to top,
       rgba(0, 0, 0, 0) 62.5%,
       rgba(0, 0, 0, 1) 75%,
       rgba(0, 0, 0, 1) 87.5%,
@@ -99,10 +87,10 @@ _:future,
    );
 }
 .gradient-blur > div:nth-of-type(6) {
-   z-index: 7;
+   z-index: 2;
    backdrop-filter: blur(32px);
    mask: linear-gradient(
-      to bottom,
+      to top,
       rgba(0, 0, 0, 0) 75%,
       rgba(0, 0, 0, 1) 87.5%,
       rgba(0, 0, 0, 1) 100%
@@ -110,13 +98,9 @@ _:future,
 }
 .gradient-blur::after {
    content: "";
-   z-index: 8;
+   z-index: 1;
    backdrop-filter: blur(64px);
-   mask: linear-gradient(
-      to bottom,
-      rgba(0, 0, 0, 0) 87.5%,
-      rgba(0, 0, 0, 1) 100%
-   );
+   mask: linear-gradient(to top, rgba(0, 0, 0, 0) 87.5%, rgba(0, 0, 0, 1) 100%);
 }
 
 svg {
