--- a/app/globals.css
+++ b/app/globals.css
@@ -127,14 +127,14 @@ strong {
 }
 
 .proseStyling {
-   @apply prose-a:text-forest-600 hover:prose-a:underline dark:prose-a:text-violet-400;
+   @apply prose-a:text-forest-600 hover:prose-a:underline;
    @apply prose-img:max-w-full;
-   @apply prose-img:rounded-xl prose-img:bg-stone-200 prose-img:transition-transform prose-img:ease-out hover:prose-img:scale-[1.01] dark:prose-img:bg-stone-800;
+   @apply prose-img:rounded-xl prose-img:bg-stone-200 prose-img:transition-transform prose-img:ease-out hover:prose-img:scale-[1.01];
    @apply prose-ul:ml-4 prose-ul:list-inside prose-ul:list-disc prose-ul:p-0 prose-li:m-0 prose-li:p-0;
    @apply prose-ol:ml-0 prose-ol:list-inside prose-ol:list-decimal prose-ol:p-0 prose-li:m-0 prose-li:p-0;
-   @apply prose-blockquote:border-l-2 dark:prose-blockquote:border-stone-800;
+   @apply prose-blockquote:border-l-2;
    @apply prose-headings:mb-0 prose-headings:mt-5 prose-headings:font-lora prose-h2:text-[1.25em] prose-h3:text-[1.125em] prose-h4:text-[1.0625em] prose-h5:text-[1.03125em] prose-h6:text-[1em];
-   @apply prose-code:rounded-lg prose-code:bg-slate-100 prose-code:px-1 prose-code:py-0.5 prose-code:text-[calc(1em-1px)] dark:prose-code:bg-stone-800;
+   @apply prose-code:rounded-lg prose-code:bg-slate-100 prose-code:px-1 prose-code:py-0.5 prose-code:text-[calc(1em-1px)];
 }
 
 code {
@@ -208,7 +208,7 @@ code {
    @apply justify-between;
    @apply gap-2;
    @apply rounded-lg;
-   @apply dark:bg-stone-950;
+
    @apply px-2;
    @apply py-1;
    @apply text-sm;
@@ -227,7 +227,6 @@ code {
    @apply justify-between;
    @apply gap-2;
    @apply rounded-lg;
-   @apply dark:bg-stone-950;
    @apply px-2;
    @apply py-1;
    @apply text-sm;
@@ -247,8 +246,6 @@ code {
    @apply gap-2;
    @apply rounded-lg;
    @apply border;
-   @apply dark:border-stone-700;
-   @apply dark:bg-stone-950;
    @apply px-1.5;
    @apply py-0.5;
    @apply text-[calc(1em-1px)];
@@ -265,7 +262,6 @@ code {
 
    list-style-type: " ";
    @apply bg-[url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGZpbGw9Im5vbmUiIHZpZXdCb3g9IjAgMCAyNCAyNCIgc3Ryb2tlLXdpZHRoPSIxLjUiIHN0cm9rZT0iI2E4YTI5ZSI+CiAgPHBhdGggc3Ryb2tlLWxpbmVjYXA9InJvdW5kIiBzdHJva2UtbGluZWpvaW49InJvdW5kIiBkPSJtOC4yNSA0LjUgNy41IDcuNS03LjUgNy41IiAvPgo8L3N2Zz4K)];
-   @apply dark:bg-[url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGZpbGw9Im5vbmUiIHZpZXdCb3g9IjAgMCAyNCAyNCIgc3Ryb2tlLXdpZHRoPSIxLjUiIHN0cm9rZT0iIzc4NzE2YyI+CiAgPHBhdGggc3Ryb2tlLWxpbmVjYXA9InJvdW5kIiBzdHJva2UtbGluZWpvaW49InJvdW5kIiBkPSJtOC4yNSA0LjUgNy41IDcuNS03LjUgNy41IiAvPgo8L3N2Zz4K)];
    @apply bg-no-repeat;
    background-position: left center;
    background-size: 0.9em;
@@ -295,7 +291,6 @@ _:future,
 
 details[open] > .details-dropdown {
    @apply bg-[url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGZpbGw9Im5vbmUiIHZpZXdCb3g9IjAgMCAyNCAyNCIgc3Ryb2tlLXdpZHRoPSIxLjUiIHN0cm9rZT0iI2E4YTI5ZSI+CiAgPHBhdGggc3Ryb2tlLWxpbmVjYXA9InJvdW5kIiBzdHJva2UtbGluZWpvaW49InJvdW5kIiBkPSJtMTkuNSA4LjI1LTcuNSA3LjUtNy41LTcuNSIgLz4KPC9zdmc+Cg==)];
-   @apply dark:bg-[url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGZpbGw9Im5vbmUiIHZpZXdCb3g9IjAgMCAyNCAyNCIgc3Ryb2tlLXdpZHRoPSIxLjUiIHN0cm9rZT0iIzc4NzE2YyI+CiAgPHBhdGggc3Ryb2tlLWxpbmVjYXA9InJvdW5kIiBzdHJva2UtbGluZWpvaW49InJvdW5kIiBkPSJtMTkuNSA4LjI1LTcuNSA3LjUtNy41LTcuNSIgLz4KPC9zdmc+Cg==)];
 }
 
 .details-dropdown::-webkit-details-marker,
@@ -314,12 +309,10 @@ details[open] > .details-dropdown {
    @apply p-4;
    @apply bg-stone-200;
    @apply border-0;
-   @apply dark:bg-stone-800;
    @apply rounded-xl;
    @apply transition-transform;
    @apply ease-out;
    @apply text-stone-900;
-   @apply dark:text-stone-300;
    @apply leading-5;
    @apply w-full;
    @apply hover:scale-[1.01];
@@ -329,7 +322,6 @@ details[open] > .details-dropdown {
    @apply mt-0 !important;
    @apply mb-0 !important;
    @apply text-stone-600;
-   @apply dark:text-stone-500;
 }
 
 .rl-metadata {
@@ -380,7 +372,6 @@ details[open] > .details-dropdown {
 .rl-url {
    @apply not-italic;
    @apply text-stone-700;
-   @apply dark:text-stone-400;
    @apply truncate;
    @apply max-w-full;
    @apply md:max-w-[345px];
