--- a/app/globals.css
+++ b/app/globals.css
@@ -127,12 +127,12 @@ strong {
 }
 
 .proseStyling {
-   @apply prose-a:text-forest-600 hover:prose-a:underline;
+   @apply prose-a:text-forest-600 hover:prose-a:underline prose-a:dark:text-forest-300;
    @apply prose-img:max-w-full;
-   @apply prose-img:rounded-xl prose-img:bg-stone-200 prose-img:transition-transform prose-img:ease-out hover:prose-img:scale-[1.01];
+   @apply prose-img:rounded-xl prose-img:bg-stone-200 prose-img:transition-transform prose-img:ease-out hover:prose-img:scale-[1.01] prose-img:dark:bg-stone-600/30;
    @apply prose-ul:ml-4 prose-ul:list-inside prose-ul:list-disc prose-ul:p-0 prose-li:m-0 prose-li:p-0;
    @apply prose-ol:ml-0 prose-ol:list-inside prose-ol:list-decimal prose-ol:p-0 prose-li:m-0 prose-li:p-0;
-   @apply prose-blockquote:border-l-2 prose-blockquote:border-stone-200;
+   @apply prose-blockquote:border-l-2 prose-blockquote:border-stone-200 prose-blockquote:dark:border-stone-600/30;
    @apply prose-headings:mb-0 prose-headings:mt-5 prose-headings:font-lora prose-h2:text-[1.25em] prose-h3:text-[1.125em] prose-h4:text-[1.0625em] prose-h5:text-[1.03125em] prose-h6:text-[1em];
    @apply prose-code:rounded-lg prose-code:bg-stone-200 prose-code:px-1 prose-code:py-0.5 prose-code:text-[calc(1em-1px)];
 }
@@ -215,9 +215,9 @@ code {
    @apply transition-transform;
    @apply ease-out;
    @apply hover:scale-[1.01];
-   @apply bg-forest-100;
-   @apply text-forest-700;
-   @apply hover:bg-forest-200;
+   @apply bg-forest-100 dark:bg-forest-200;
+   @apply text-forest-700 dark:text-forest-800;
+   @apply hover:bg-forest-200 dark:hover:bg-forest-300;
 }
 
 .btn-sm-alt {
@@ -233,9 +233,9 @@ code {
    @apply transition-transform;
    @apply ease-out;
    @apply hover:scale-[1.01];
-   @apply bg-stone-200;
-   @apply text-stone-900;
-   @apply hover:bg-stone-300;
+   @apply bg-stone-200 dark:bg-stone-600;
+   @apply text-stone-900 dark:text-stone-300;
+   @apply hover:bg-stone-300 dark:hover:bg-stone-700;
 }
 
 .btn-xs {
@@ -307,12 +307,12 @@ details[open] > .details-dropdown {
    @apply flex-col;
    @apply gap-3;
    @apply p-4;
-   @apply bg-stone-200;
+   @apply bg-stone-200 dark:bg-stone-600/30;
    @apply border-0;
    @apply rounded-xl;
    @apply transition-transform;
    @apply ease-out;
-   @apply text-stone-900;
+   @apply text-stone-900 dark:text-stone-100;
    @apply leading-5;
    @apply w-full;
    @apply hover:scale-[1.01];
@@ -321,7 +321,7 @@ details[open] > .details-dropdown {
 .rl-snippet {
    @apply mt-0 !important;
    @apply mb-0 !important;
-   @apply text-stone-600;
+   @apply text-stone-600 dark:text-stone-300;
 }
 
 .rl-metadata {
@@ -349,11 +349,11 @@ details[open] > .details-dropdown {
    @apply w-[calc(1.25rem-2px)];
    @apply h-[calc(1.25rem-2px)];
    @apply max-[320px]:hidden;
-   @apply text-stone-500;
+   @apply text-stone-500 dark:text-stone-200;
 }
 
 .rl-container blockquote:hover .rl-metadata > svg {
-   @apply text-forest-500;
+   @apply text-forest-500 dark:text-forest-400;
 }
 
 .rl-url-container {
@@ -371,7 +371,7 @@ details[open] > .details-dropdown {
 
 .rl-url {
    @apply not-italic;
-   @apply text-stone-700;
+   @apply text-stone-700 dark:text-stone-100;
    @apply truncate;
    @apply max-w-full;
    @apply md:max-w-[345px];
