--- a/app/globals.css
+++ b/app/globals.css
@@ -323,7 +323,7 @@ details[open] > .details-dropdown {
    @apply flex-col;
    @apply gap-3;
    @apply p-4;
-   @apply bg-stone-200 dark:bg-stone-600;
+   @apply bg-stone-200 dark:bg-stone-950;
    @apply border-0;
    @apply rounded-xl;
    @apply transition-transform;
@@ -369,7 +369,7 @@ details[open] > .details-dropdown {
 }
 
 .rl-container blockquote:hover .rl-metadata > svg {
-   @apply text-forest-500 dark:text-forest-400;
+   @apply text-forest-500 dark:text-betty-400;
 }
 
 .rl-url-container {
